added id to the div
added id to the div

--- a/forecast.html
+++ b/forecast.html
@@ -7,7 +7,7 @@
 	</head>
 	<body ng-controller="ForecastController as forecaster">
     
-		<div>{{"Weather Girls"}}</div>
+		<div id="test">{{"Weather Girls"}}</div>
 		<div id="title-bar" class="forecast-flex">
 			<div class="forecast-child">Kajal</div>
 			<div class="forecast-child">Location</div>
